--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,9 @@
         <a class="navbar-brand" href="#">Contestapp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
+            <li><%= link_to "Products", products_path%></li>
             <li><%= link_to "Accounts", accounts_path%></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Path2", "/path3"  %></li>
           </ul>
         </div>
       </div>
@@ -67,8 +67,8 @@
             <h3>Sidebar</h3>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
+              <li><%= link_to "Products", products_path%></li>
               <li><%= link_to "Accounts", accounts_path%></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
               <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
