Shopify connection and related UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,8 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Products", products_path%></li>
+            <li><%= link_to "Orders", orders_path%></li>
             <li><%= link_to "Accounts", accounts_path%></li>
-            <li><%= link_to "Path2", "/path3"  %></li>
           </ul>
         </div>
       </div>
