--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,23 +57,24 @@
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-lg-9">
+      <div class="row-fluid">
+        <% if content_for?(:sidebar) %>
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <%= yield(:sidebar) %>
+          </div>
+        </div>
+        <div class="span9">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Products", products_path%></li>
-              <li><%= link_to "Accounts", accounts_path%></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-      </div><!--/row-->
+        <% else %>
+          <div class="span12">
+            <%= bootstrap_flash %>
+            <%= yield %>
+          </div>
+        <% end %>
+      </div> <!-- /row -->
 
       <footer>
         <p>&copy; Company 2017</p>
